refactor: image and description

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -109,13 +109,15 @@
                         </div>
                         <div class="info-integrante">
                             <h2 class="nome-aluno">Kevin Lima</h2>
+                            <p>Scrum Master</p>
                         </div>
                     </div>
 
 
                     <div class="aluno-right">
                         <div class="info-integrante">
-                            <h2 class="nome-aluno">Caio Lacerda</h2>
+                            <h2 class="nome-aluno">Ana Souza</h2>
+                            <p>Product Owner</p>
                         </div>
 
 
@@ -131,13 +133,15 @@
                         </div>
                         <div class="info-integrante">
                             <h2 class="nome-aluno">Carlos Eduardo</h2>
+                            <p>Desenvolvedor</p>
                         </div>
                     </div>
 
 
                     <div class="aluno-right">
                         <div class="info-integrante">
-                            <h2 class="nome-aluno">Ana Leme</h2>
+                            <h2 class="nome-aluno">Anna Leme</h2>
+                            <p>Desenvolvedora</p>
                         </div>
 
 
@@ -149,10 +153,11 @@
 
                     <div class="aluno-left">
                         <div class="foto-aluno">
-                            <img src="../img/foto-kevin.jpeg" alt="foto participantes">
+                            <img src="../img/foto-caio.jpg" alt="foto participantes">
                         </div>
                         <div class="info-integrante">
-                            <h2 class="nome-aluno">Ana Souza</h2>
+                            <h2 class="nome-aluno">Caio Lacerda</h2>
+                            <p>Desenvolvedor</p>
                         </div>
                     </div>
 
